--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,7 @@
-body {
-  margin: 0;
-  font-family: system-ui, sans-serif;
-  background-color: #111;
-  color: white;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-button {
-  font-size: 16px;
+body {
+  @apply bg-white text-black font-sans;
 }
